# cockroach

pkg/obsservice/cmd/obsservice/: BUILD.bazel  main.go
pkg/server/: server.go  server_http.go  tenant.go
pkg/server/application_api/: storage_inspection_test.go
pkg/sql/: conn_executor.go  conn_executor_exec.go  exec_log.go  executor_statement_metrics.go  instrumentation.go  telemetry_logging.go  telemetry_logging_test.go
pkg/sql/logictest/testdata/logic_test/: statement_statistics
pkg/sql/sqlstats/: ssprovider.go
pkg/sql/sqlstats/insights/: BUILD.bazel  registry.go  registry_test.go  util.go
pkg/sql/sqlstats/persistedsqlstats/: flush_test.go
pkg/sql/sqlstats/sslocal/: BUILD.bazel  sql_stats.go  sql_stats_ingester_test.go  sql_stats_ingestor.go  sql_stats_test.go  sslocal_stats_collector.go
pkg/sql/sqlstats/ssmemstorage/: ss_mem_storage.go  ss_mem_writer.go  ss_mem_writer_test.go
pkg/sql/tests/: sysbench_test.go
pkg/ui/: BUILD.bazel  bucket_manager.go  dynamic_ui.go  ui.go  upgradesPage.html
pkg/ui/distoss/: BUILD.bazel  distoss.go
pkg/ui/workspaces/cluster-ui/src/api/: types.ts
pkg/ui/workspaces/cluster-ui/src/jobs/jobsPage/: jobsPage.fixture.tsx  jobsPage.tsx
pkg/ui/workspaces/cluster-ui/src/selectors/: common.ts
pkg/ui/workspaces/cluster-ui/src/sqlActivity/: util.tsx
pkg/ui/workspaces/cluster-ui/src/statementsPage/: statementsPage.fixture.ts  statementsPage.tsx  statementsPageConnected.tsx
pkg/ui/workspaces/cluster-ui/src/store/sqlStats/: sqlStats.reducer.ts  sqlStats.sagas.spec.ts
pkg/ui/workspaces/cluster-ui/src/store/transactionStats/: txnStats.reducer.ts
pkg/ui/workspaces/cluster-ui/src/transactionsPage/: transactionsPage.tsx
pkg/ui/workspaces/db-console/src/redux/: apiReducers.ts
pkg/ui/workspaces/db-console/src/views/jobs/: jobsPage.tsx
pkg/ui/workspaces/db-console/src/views/reports/containers/debug/: index.tsx
pkg/ui/workspaces/db-console/src/views/statements/: statementsPage.tsx
pkg/ui/workspaces/db-console/src/views/transactions/: transactionsPage.tsx
pkg/util/log/eventpb/: telemetry.proto
pkg/util/syncutil/: map.go  set.go
