load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "obsservice_lib",
    srcs = ["main.go"],
    importpath = "github.com/cockroachdb/cockroach/pkg/obsservice/cmd/obsservice",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/build",
        "//pkg/ui",
        "//pkg/ui/distoss",
        "//pkg/util/httputil",
        "@com_github_gorilla_mux//:mux",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_binary(
    name = "obsservice",
    embed = [":obsservice_lib"],
    visibility = ["//visibility:public"],
)
